--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello</h1>
+    <div class="container">
+        <div class="clock">
+
+            <div class="hand" style="--clr:#198754;" id="hour" ><b>Hour</b><i></i></div>
+            <div class="hand" style="--clr:#0d6efd;" id="min" ><b>Minute</b><i></i></div>
+            <div class="hand" style="--clr:#ff0052;" id="sec" ><b>Second</b><i></i></div>
+
+            <span style="--i:1;" ><b>1</b></span>
+            <span style="--i:2;" ><b>2</b></span>
+            <span style="--i:3;" ><b>3</b></span>
+            <span style="--i:4;" ><b>4</b></span>
+            <span style="--i:5;" ><b>5</b></span>
+            <span style="--i:6;" ><b>6</b></span>
+            <span style="--i:7;" ><b>7</b></span>
+            <span style="--i:8;" ><b>8</b></span>
+            <span style="--i:9;" ><b>9</b></span>
+            <span style="--i:10;" ><b>10</b></span>
+            <span style="--i:11;" ><b>11</b></span>
+            <span style="--i:12;" ><b>12</b></span>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
